# ARTSynchronized

./: .gitignore  CMakeLists.txt  example.cpp  run_example.sh
OptimisticLockCoupling/: N.cpp  N.h  Tree.cpp  Tree.h
ROWEX/: Tree.cpp  Tree.h
datasets/generated_ips/: continuous_ips_100k.txt  continuous_ips_1k.txt  continuous_reversed_ips_100k.txt  continuous_reversed_ips_10k.txt  continuous_reversed_ips_1k.txt  max_reversed_ips_1k.txt  random_ips_100k.txt  random_ips_10k.txt  random_ips_1k.txt
tests/: test_read_data_from_file.cpp
utils/: avg_insert_time.py  iptools.h  multi_insert_time_get.py
